--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     </nav>
 
     <main>
-      <section class="tab-content home" data-tab="home">
+      <!-- HOME – visas först -->
+      <section class="tab-content home" data-tab="home" style="display:block;">
         <div class="card-grid">
           <div class="card green">
             <h3>Claim XP</h3>
@@ -79,7 +80,8 @@
         </div>
       </section>
 
-      <section class="tab-content track" data-tab="track">
+      <!-- TRACK -->
+      <section class="tab-content track" data-tab="track" style="display:none;">
         <div class="hero">
           <h2>📈 Onchain Tracker</h2>
           <p class="subtitle">Track your own wallet activity</p>
@@ -122,7 +124,8 @@
         </div>
       </section>
 
-      <section class="tab-content rewards" data-tab="rewards">
+      <!-- REWARDS -->
+      <section class="tab-content rewards" data-tab="rewards" style="display:none;">
         <div class="hero">
           <h2>🎁 Rewards & XP</h2>
           <p class="subtitle">Boost your journey and earn daily perks</p>
@@ -138,7 +141,8 @@
         </div>
       </section>
 
-      <section class="tab-content premium" data-tab="premium">
+      <!-- PREMIUM -->
+      <section class="tab-content premium" data-tab="premium" style="display:none;">
         <div class="hero">
           <h2>💎 Premium Tools</h2>
           <p class="subtitle">Upgrade to unlock full features</p>
@@ -186,7 +190,8 @@
         </div>
       </section>
 
-      <section class="tab-content profile" data-tab="profile">
+      <!-- PROFILE -->
+      <section class="tab-content profile" data-tab="profile" style="display:none;">
         <div class="hero">
           <h2>👤 My Profile</h2>
           <p class="subtitle">Account overview & referral bonuses</p>
@@ -224,6 +229,7 @@
         </div>
       </section>
 
+      <!-- MODALS -->
       <div id="faqModal" class="modal hidden">
         <div class="modal-content">
           <h3>❓ How WarpAi Works</h3>
