--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <button id="buyTokenBtn">Buy Now</button>
           </div>
           <div class="card dark">
-            <h3><span id="currentXP">🔥 87 XP</span></h3>
+            <h3><span idрг="2">id="currentXP">🔥 180 XP</span></h3>
             <p>5-day streak</p>
             <button class="info-btn green" onclick="toggleXpInfo()">[?] About XP & WAI</button>
           </div>
@@ -71,11 +71,11 @@
           </div>
           <div class="card full journey">
             <h3>🎯 Your XP Journey</h3>
-            <p>Level 2 → Next Level: 100 XP</p>
+            <p>Level 2 → Next Level: 200 XP</p>
             <div class="xp-bar">
-              <div class="xp-fill" style="width: 87%;"></div>
+              <div class="xp-fill" style="width: 90%;"></div>
             </div>
-            <small>87 / 100 XP</small>
+            <small>180 / 200 XP</small>
           </div>
         </div>
       </section>
@@ -102,7 +102,7 @@
           </div>
           <div class="card dark">
             <h3>Gas Spent</h3>
-            <p id="gasSpent">0.14 ETH (~$42)</p>
+            <p id="gasPrice">0.14 ETH (~$42)</p>
           </div>
           <div class="card dark">
             <h3>Connected dApps</h3>
@@ -126,26 +126,25 @@
 
       <!-- REWARDS -->
       <section class="tab-content rewards" data-tab="rewards" style="display:none;">
-        <div class="hero">
-          <h2>🎁 Rewards & XP</h2>
+        <div class="full earn rewards">
+ <h2>🚀 Rewards & XP</h2>
           <p class="subtitle">Boost your journey and earn daily perks</p>
-        </div>
         <div class="card-grid">
           <div class="card full earn">
             <h3>🚀 Earn More WAI</h3>
             <p>Share the app and invite friends to earn WarpAi Tokens.</p>
             <button id="copyReferralBtn">Copy Referral Link</button>
-            <button id="shareOnXBtn">Share on X</button>
-            <button id="shareOnFarcasterBtn">Share on Farcaster</button>
+            <button id="shareOnXBtn()">Share on X</button>
+            <button id="shareOnFarcasterBtn()">Share on Farcaster</button>
           </div>
         </div>
       </section>
 
       <!-- PREMIUM -->
-      <section class="tab-content premium" data-tab="premium" style="display:none;">
+      <section class="tab-content" data-tab="premium" style="display:none;">
         <div class="hero">
           <h2>💎 Premium Tools</h2>
-          <p class="subtitle">Upgrade to unlock full features</p>
+          <p class="subtitle">Upgrade to premium to unlock full features</p>
         </div>
         <div class="card-grid">
           <div class="card dark">
@@ -200,7 +199,7 @@
           <div class="card dark">
             <h3>Wallet</h3>
             <p id="walletAddress">Not Connected</p>
-            <p>Total XP: <strong id="totalXP">87</strong></p>
+            <p>Total XP: <strong id="totalXP">180</strong></p>
           </div>
           <div class="card dark">
             <h3>WarpAi Token</h3>
