--- a/index.html
+++ b/index.html
@@ -62,22 +62,17 @@
   <p>0-day streak</p>
   <button class="info-btn green" onclick="toggleXpInfo()">About XP & WAI</button>
 </div>
-          <div class="card purple">
-            <h3>💎 Premium Tools</h3>
-            <div class="btn-row">
-              <button id="claimAddressBtn">Claim another address</button>
-              <button id="trackRandomBtn">Track random wallet</button>
-            </div>
+          
           </div>
           <div class="card full journey">
-            <h3>🎯 Your XP Journey</h3>
-            <p>Level 2 → Next Level: 200 XP</p>
-            <div class="xp-bar">
-              <div class="xp-fill" style="width: 90%;"></div>
-            </div>
-            <small>180 / 200 XP</small>
-          </div>
-        </div>
+  <h3>🎯 Your XP Journey</h3>
+  <p>Level <span id="level">1</span> → Next Level: <span id="nextLevelXP">200</span> XP</p>
+  <div class="xp-bar">
+    <div class="xp-fill" id="xpFill" style="width: 0%;"></div>
+  </div>
+  <small><span id="currentXPProgress">0</span> / <span id="nextLevelXP">200</span> XP</small>
+  <p id="badge" style="display:none;">🏆 Streak Master</p>
+</div>
       </section>
 
       <!-- TRACK -->
