--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <ul>
       <li><strong>Price:</strong> 0.01 ETH per 100 $WARP</li>
       <li><strong>Use:</strong> Unlock premium, boost XP, or trade.</li>
-      <li><strong>Zora:</strong> <a href="https://zora.co/YOUR_ZORA_LINK" target="_blank">Buy on Zora</a></li>
+      <li><strong>Zora:</strong> <a href="https://zora.co/coin/base:0x0cd1e9c691af8d4d34efcc089a40b31c691d0482?referrer=0xa8b817f09702c8d77fdb6d7d677a30cba5c9d7b9" target="_blank">Buy on Zora</a></li>
     </ul>
     <button onclick="toggleWarpInfo()">Close</button>
   </div>
