--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
         </div>
       </div>
 
-      <div id="warpInfoModal" class="modal hidden">
+     <div id="warpInfoModal" class="modal hidden">
   <div class="modal-content">
-    <h3>$WARP Token</h3>
-    <p>Buy our pre-launch token on Zora!</p>
+    <h3>Buy WarpAi Token</h3>
+    <p>Purchase WarpAi Token on Zora!</p>
     <ul>
       <li><strong>Price:</strong> 0.01 ETH per 100 $WARP</li>
       <li><strong>Use:</strong> Unlock premium, boost XP, or trade.</li>
